# photoframe-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  photoframe.example.toml  renovate.json  test_exif_write.rs
.github/: copilot-instructions.md
.github/workflows/: ci.yml
photoframe-nextjs/: next.config.js  package-lock.json  package.json  theme.ts  tsconfig.json
photoframe-nextjs/app/: client-provider.tsx  globals.css  head.tsx  layout.tsx  manifest.ts  page.tsx
photoframe-nextjs/app/frames/: page.tsx
photoframe-nextjs/app/sources/: page.tsx
photoframe-nextjs/components/: FrameCard.tsx
photoframe-nextjs/components/frame/: ActionsBar.tsx  AdjustmentsAccordion.tsx  FrameHeader.tsx  ImagePreview.tsx  MiscSettingsAccordion.tsx  PaddingAccordion.tsx  TimestampAccordion.tsx  index.ts  types.ts
photoframe-nextjs/hooks/: googlePhotos.ts  http.ts  useDebouncedEffect.ts
photoframe-nextjs/public/: site.webmanifest  sw.js
photoframe-server/: Cargo.toml
photoframe-server/src/: config.rs  dither.rs  frame.rs  http.rs  lib.rs  main.rs  pipeline.rs  scheduler.rs  sources.rs  timestamp.rs  ui.rs
