[package]
name = "photoframe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
toml_edit = { version = "0.23", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
	"rt-multi-thread",
	"macros",
	"fs",
	"io-util",
	"sync",
] }
axum = { version = "0.8", features = ["json", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-cron-scheduler = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
croner = { version = "3.0.0", features = ["serde"] }
glob = "0.3"
rand = { version = "0.9", features = ["std"] }
image = { version = "0.25.8", default-features = false, features = [
	"png",
	"jpeg",
] }
async-trait = "0.1"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = [
	"json",
	"rustls-tls",
	"multipart",
] }
photon-rs = "0.3"
css-color = "0.2.8"
oauth2 = { version = "5", default-features = false, features = [
	"reqwest",
	"rustls-tls",
] }
time = { version = "0.3", features = ["parsing", "macros", "formatting"] }
percent-encoding = "2"
once_cell = "1"
urlencoding = "2.1.3"
kamadak-exif = "0.6.1"
mime_guess = "2"
rust-embed = { version = "8", optional = true, features = [
	"debug-embed",
	"include-exclude",
] }
mime = "0.3"
rusttype = "0.9"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["embed_ui"]
embed_ui = ["dep:rust-embed"]
